# personal-library-manager

./: .dockerignore  .envrc  .gitignore  AGENTS.md  ARCHITECTURE_DRAFT.md  DESIGN_PLAN.md  GROUND_TRUTH_AUDIT_ANALYSIS.md  GROUND_TRUTH_EVIDENCE.md  RAG_PIPELINE_ARCHITECTURE.md  README.md  REQUIREMENTS.md  RESEARCH.md  SENTENCE_SPLITTING_ANALYSIS.md  SENTENCE_SPLITTING_QUICK_REFERENCE.md  flake.nix  opencode.json  pyproject.toml  test.db
poc/archive/poc-1-llm-extraction-guardrails/: RESULTS.md  SPEC.md  analyze_results.py  generate_ground_truth.py  pyproject.toml  run_experiment.py
poc/archive/poc-1c-scalable-ner/: DECISION_LOG.md  PRECISION_ANALYSIS.md  README.md  RESEARCH_NOTES.md  analyze_true_negatives.py  analyze_union_recall.py  build_tech_negatives.py  compare_models_cv.py  generate_raw_fixture.py  parse_so_ner.py  pyproject.toml  retrieval_ner.py  run_validator_test.py  run_vocab_validator_test.py  show_detailed_stats.py  slimer_ner.py
poc/archive/poc-2-confidence-scoring/: SPEC.md  benchmark_ner_models.py  grading.py  ner_models.py  prepare_dataset.py  pyproject.toml
poc/chunking_benchmark/: DESIGN.md  README.md  pyproject.toml  run_benchmark.py
poc/chunking_benchmark/corpus/: corpus_metadata.json  generate_corpus.py  ground_truth.json
poc/chunking_benchmark/evaluation/: __init__.py  benchmark.py  embedder.py  metrics.py  retriever.py
poc/chunking_benchmark/results/: benchmark_summary.json  report.md
poc/chunking_benchmark/strategies/: __init__.py  base.py  fixed_size.py  heading_based.py  heading_limited.py  heading_paragraph.py  hierarchical.py  paragraphs.py
poc/chunking_benchmark_v2/: BENCHMARK_RESULTS.md  PRECISION_RESEARCH.md  README.md  SMART_CHUNKING_VALIDATION_REPORT.md  analyze_failed_facts.py  benchmark_all_retrieval_strategies.py  benchmark_expanded_corpus.py  benchmark_needle_haystack.py  benchmark_realistic_questions.py  benchmark_retrieval_strategies.py  config.yaml  config_enriched.yaml  config_enriched_minimal.yaml  config_failure_analysis.yaml  config_full.yaml  config_human_queries.yaml  config_light.yaml  config_phase2_llm.yaml  config_quick.yaml  config_realistic.yaml  config_realistic_best.yaml  download_models.py  find_missing_facts.py  full_benchmark_output.txt  generate_report.py  logger.py  manual_test.py  pyproject.toml  run_benchmark.py  run_comprehensive_benchmark.py  test_gems.py  test_strategies_higher_k.py  test_top_k.py
poc/chunking_benchmark_v2/corpus/: ALL_TEST_QUESTIONS.md  baseline_queries.json  corpus_metadata_expanded.json  corpus_metadata_minimal.json  edge_case_queries.json  generate_expanded_corpus.py  generate_ground_truth_v2.py  ground_truth_expanded.json  ground_truth_human.json  ground_truth_realistic.json  ground_truth_v2.json  human_queries_schema.json  needle_questions.json  needle_questions_adversarial.json  needle_questions_adversarial_pilot.json  needle_selection.json
poc/chunking_benchmark_v2/enrichment/: __init__.py  cache.py  fast.py  provider.py  summary.py
poc/chunking_benchmark_v2/enrichment_cache/: 06d985ae4c6d6ecf.json  137b45cedb968685.json  1632aae6996079ca.json  2118973b3d0ffb12.json  245ca6a123046b65.json  24de7a159611cb31.json  2a0a0b7bc6405f50.json  2ec85222ad27dc53.json  2edf902be26612d8.json  34e2da504db0665a.json  399628b17eee02dd.json  39aba3e6a02b6625.json  3b375b3a199c933c.json  3c55a43dcc75033e.json  4010c61be6079682.json  44ced9401b927de7.json  457e01bb045afc91.json  46e90991cdfb5cea.json  49755beba26f384e.json  502557087c96dcc7.json  5ccbb97e23f63f96.json  5f882f931972144a.json  6511cc0ed34f7eef.json  6642c36695344e31.json  6c3576544867d816.json  711e1320202f246b.json  7416caa480af50c6.json  7f15f66030cf7c26.json  8b85366eac21a5c3.json  8f79c708b72e05a5.json  90acac4028ea0728.json  93b6c0568098d76d.json  b512eef23e53a540.json  b8dbbbaf6eabfb5c.json  c0da56615256485d.json  c699642c18ab951e.json  c6dc41a0d7b363e1.json  c77ac1cf257da8cc.json  cdc545229419019c.json  d30ba3fd89993c43.json  (+11 more)
poc/chunking_benchmark_v2/evaluation/: metrics.py
poc/chunking_benchmark_v2/results/: 2025-01-22_chunking_20_strategies_raw.json  2025-01-22_chunking_20_strategies_summary.md  2025-01-22_chunking_strategies_20_comparison.md  2025-01-22_expanded_corpus_benchmark.json  2025-01-22_retrieval_strategies_bge_hybrid_rerank.md  BENCHMARK_FINDINGS_V2.md  (+28 more)
poc/convex_fusion_benchmark/: EVALUATION_CRITERIA.md  RESULTS.md  pyproject.toml  verify_rrf_parity.py
poc/plm_vs_rag_benchmark/: baseline_langchain.py  chunk_extractor.py  corpus  pyproject.toml
poc/poc-1b-llm-extraction-improvements/: ARCHITECTURE.md  DELIVERABLES.md  DEPENDENCY_TREE.md  EXECUTIVE_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  RESULTS.md  RUNNING_TEST_STATUS.md  STRATEGY_COMPARISON.md  TEST_PATTERNS_ANALYSIS.md  TEST_PATTERNS_INDEX.md  UNTESTED_STRATEGIES.md  VISUAL_SUMMARY.txt  analyze_1vote.py  analyze_extraction_failures.py  analyze_false_positives.py  analyze_recall_ceiling.py  analyze_v2_2_quick.py  audit_ground_truth.py  check_hallucination.py  generate_scale_gt.py  hybrid_results.txt  pyproject.toml  rebaseline_v2_gt.py  rescore_all.py  results_output.txt  run_experiment.py  run_scale_pipeline.py  scale_test_runner.py  so_ner_benchmark.py  test_discrimination_approach.py  test_dplus_v2.py  test_dplus_v2_1.py  test_dplus_v3_sweep.py  test_filter_upgrades.py  test_hybrid_final.py  test_hybrid_ner.py  test_pattern_plus_llm.py  test_prompt_variants.py  (+3 more)
poc/poc-2-confidence-scoring/: README.md  RESULTS.md  analysis.py  ensembles.py  eval_framework.py  finetune_gliner.py  generate_ood_dataset.py  phase_4a_analysis.py  pyproject.toml  signals.py  test_signals.py
poc/raptor_test/: pyproject.toml  results.json
poc/retrieval_benchmark/: README.md  debug_lod_llm_actual.py  debug_lod_llm_fix.py  debug_lod_llm_real.py  debug_lod_llm_simple.py  pyproject.toml
poc/shared/: README.md  pyproject.toml
poc/splade_benchmark/: EVALUATION_CRITERIA.md  README.md  RESULTS.md  TODO.md  configuration_comparison.py  convex_fusion.py  latency_profile.py  production_benchmark.py  pyproject.toml  run_all.py  splade_index.py  visualize.py
(+1001 files in other folders)
