[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plm"
version = "0.1.0"
description = "Personal Library Manager - Extract and organize book metadata"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Author", email = "author@example.com"}
]

dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "gliner>=0.2.25",
    "pysbd>=0.3.4",
    "yake>=0.7.3",
    "bm25s>=0.2.14",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "watchdog>=3.0.0",
    "click>=8.0.0",
    "redis>=5.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
plm-query = "plm.search.service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plm"]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "rank-bm25>=0.2.2",  # Required for POC comparison tests
]
