[project]
name = "chunking-benchmark"
version = "0.1.0"
description = "Benchmark different document chunking strategies for RAG"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
