[project]
name = "convex-fusion-benchmark"
version = "0.1.0"
description = "POC: Convex combination fusion vs RRF for hybrid retrieval"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]
