[project]
name = "plm-vs-rag-benchmark"
version = "0.1.0"
description = "Benchmark comparing PLM hybrid retrieval against baseline LangChain RAG"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    # PLM dependencies (for direct import of HybridRetriever)
    "bm25s>=0.2.14",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
