[project]
name = "poc-1b-llm-extraction-improvements"
version = "0.1.0"
description = "Test advanced LLM techniques to achieve 95%+ precision/recall with <1% hallucination"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "instructor>=1.7.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "gliner>=0.2.0",
    "spacy>=3.7.0",
    "ollama>=0.4.0",
    "yake>=0.4.8",
    "keybert>=0.8.0",
    "sentence-transformers>=2.2.0",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
