[project]
name = "poc-2-confidence-scoring"
version = "0.1.0"
description = "Confidence scoring and threshold determination for fast/slow extraction routing"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "rapidfuzz>=3.0.0",
    "anthropic>=0.40.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
