[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for all POCs — LLM providers (Anthropic, Gemini) with OpenCode OAuth"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
