[project]
name = "poc-1-llm-extraction-guardrails"
version = "0.1.0"
description = "POC-1: Test LLM term extraction with guardrail prompts"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    "rapidfuzz>=3.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
# Script-only project, no package to build
package = false
