[project]
name = "poc-1c-scalable-ner"
version = "0.1.0"
description = "Scalable NER extraction without vocabulary lists - retrieval-augmented and SLIMER approaches"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
